--- a/File Operation/main.ipynb
+++ b/File Operation/main.ipynb
@@ -19,6 +19,42 @@
     "content = file.read()\n",
     "print(content)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d7083f5d-dc39-4b16-8361-5bccc8d8b968",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "One Two Three Four FIve Six Seven Eight Nine \n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"akshat.txt\" , \"r\") as file:\n",
+    "    numbers = file.read().splitlines()\n",
+    "\n",
+    "dict = { 0:\"Zero\" , 1:\"One\" , 2:\"Two\" , 3:\"Three\" , 4:\"Four\" , 5:\"FIve\" , 6:\"Six\" , 7:\"Seven\" , 8:\"Eight\" , 9:\"Nine\" }\n",
+    "for num in numbers:\n",
+    "    for i in num:\n",
+    "        if i.isdigit():\n",
+    "            print(dict[int(i)] , end = \" \")\n",
+    "    print()    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5732fec6-43b3-4461-a5e9-c9b159d89e7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ".."
+   ]
   }
  ],
  "metadata": {
