all the function that i tried to learn in the NUMPY

--- a/File Operation/NUMPY.ipynb
+++ b/File Operation/NUMPY.ipynb
@@ -186,33 +186,526 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0]])"
+       "array([[[0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0]],\n",
+       "\n",
+       "       [[0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0]],\n",
+       "\n",
+       "       [[0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0]]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# All 0s Array\n",
-    "a = np.zeros((3,4),int)\n",
-    "a"
+    "a = np.zeros((3,4,4),int)\n",
+    "a "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1, 1],\n",
+       "       [1, 1, 1],\n",
+       "       [1, 1, 1]], dtype=int32)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# All Ones Matrix\n",
+    "\n",
+    "b= np.ones((3,3),dtype=\"int32\")\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[45, 45, 45, 45],\n",
+       "       [45, 45, 45, 45],\n",
+       "       [45, 45, 45, 45]], dtype=int16)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " #Any other Number\n",
+    "\n",
+    "c = np.full((3,4),45,dtype=\"int16\")\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[34, 34, 34, 34],\n",
+       "       [34, 34, 34, 34],\n",
+       "       [34, 34, 34, 34]], dtype=int16)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Any other NUmber (full-like)\n",
+    "d = np.full_like(c,34)\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.7395553 , 0.33893141, 0.61999614],\n",
+       "       [0.77581144, 0.68235708, 0.42494169],\n",
+       "       [0.87562586, 0.54616874, 0.01559879]])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Random Decimal Variable\n",
+    "np.random.rand(3,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.80678638, 0.3918756 , 0.84918052, 0.747402  ],\n",
+       "        [0.56793318, 0.16927073, 0.29405394, 0.39363601],\n",
+       "        [0.89781418, 0.79123533, 0.38143191, 0.75244731],\n",
+       "        [0.0692855 , 0.12984965, 0.22060599, 0.62560196]],\n",
+       "\n",
+       "       [[0.32130552, 0.17659343, 0.58897786, 0.70778957],\n",
+       "        [0.29738715, 0.40239113, 0.36817658, 0.20972247],\n",
+       "        [0.32257075, 0.56397879, 0.59408397, 0.94233077],\n",
+       "        [0.02250263, 0.34550838, 0.69466433, 0.98670781]],\n",
+       "\n",
+       "       [[0.85737736, 0.90038593, 0.78223622, 0.09596602],\n",
+       "        [0.40140594, 0.0799397 , 0.41781746, 0.74201998],\n",
+       "        [0.51679743, 0.95500452, 0.51565835, 0.38607882],\n",
+       "        [0.8272301 , 0.07110499, 0.2155918 , 0.52565508]]])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.random_sample(a.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[25, 36, 39],\n",
+       "       [42, 11, 28],\n",
+       "       [33, 48, 40]])"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Random Integers Value\n",
+    "random_array = np.random.randint(10,50,size=[3,3])\n",
+    "random_array\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#The Identity Matrix\n",
+    "b = np.identity(3)\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1.]]\n",
+      "[[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]]\n",
+      "[[0. 0. 0.]\n",
+      " [0. 9. 0.]\n",
+      " [0. 0. 0.]]\n",
+      "[[1. 1. 1. 1. 1.]\n",
+      " [1. 0. 0. 0. 1.]\n",
+      " [1. 0. 9. 0. 1.]\n",
+      " [1. 0. 0. 0. 1.]\n",
+      " [1. 1. 1. 1. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "output = np.ones([5,5])\n",
+    "print(output )\n",
+    "\n",
+    "x = np.zeros([3,3])\n",
+    "print(x)\n",
+    "\n",
+    "x[1][1] = 9\n",
+    "print(x)\n",
+    "\n",
+    "output[1:-1,1:-1] = x\n",
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[34  3  4]\n",
+      "[34  3  4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "first = np.array([2,3,4])\n",
+    "second = first #here second is pointing to the same location where  the first is pointing \n",
+    "second[0] = 34\n",
+    "\n",
+    "print(first)\n",
+    "print(second)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[34  3  4]\n",
+      "[45  3  4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "second = first.copy()\n",
+    "second[0] = 45\n",
+    "print(first)\n",
+    "print(second)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Mathmatics in Numpy arrays "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1,2,3,4,5])\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 4, 5, 6, 7])"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a+2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1,  0,  1,  2,  3])"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a-2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 4,  8, 12, 16, 20])"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a*4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.25, 0.5 , 0.75, 1.  , 1.25])"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a / 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 3, 3, 5, 5])"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = np.array([0,1,0,1,0])\n",
+    "a + b "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  4,  9, 16, 25])"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a ** 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Linear algebra\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 1 1]\n",
+      " [1 1 1]]\n",
+      "[[2 2]\n",
+      " [2 2]\n",
+      " [2 2]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[6, 6],\n",
+       "       [6, 6]])"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.ones((2,3),int)\n",
+    "print(a)\n",
+    "\n",
+    "b = np.full((3,2),2)\n",
+    "print(b)\n",
+    "\n",
+    "np.matmul(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Find the determinant\n",
+    "c = np.identity(3)\n",
+    "np.linalg.det(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Statistics\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
