--- a/File Operation/FileOperation.ipynb
+++ b/File Operation/FileOperation.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,6 +52,19 @@
     "\n",
     "    f.writelines(words) \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"practice.txt\",\"r+\") as f:\n",
+    "    data = f.read()\n",
+    "    replace_string = data.replace(\"Practice\",\"Akshat\")\n",
+    "    f.write(replace_string)\n",
+    "    \n"
    ]
   }
  ],
