--- a/File Operation/FileOperation.ipynb
+++ b/File Operation/FileOperation.ipynb
@@ -56,16 +56,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"practice.txt\",\"r+\") as f:\n",
     "    data = f.read()\n",
+    "    f.seek(0,0)\n",
     "    replace_string = data.replace(\"Practice\",\"Akshat\")\n",
     "    f.write(replace_string)\n",
-    "    \n"
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not Found\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"practice.txt\",\"r\") as f:\n",
+    "    data = f.read()\n",
+    "    if(data.find(\"lines\") != -1):\n",
+    "        print(\"Found\")\n",
+    "    else:\n",
+    "        print(\"Not Found\")\n",
+    "\n",
+    "    f.seek(0,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12 \n",
+      "34 \n",
+      "2 \n",
+      "36 \n",
+      "78 \n",
+      "332 \n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "with open(\"comma_separated.txt\",\"r\") as f:\n",
+    "    data = f.read()\n",
+    "   \n",
+    "   \n",
+    "    list = data.split(\",\")\n",
+    "    for val in list:\n",
+    "        if(int(val) % 2 == 0):\n",
+    "            print(val,\"\")\n",
+    "            count += 1\n",
+    "print(count)\n",
+    "       \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
