--- a/Data_Types1.ipynb
+++ b/Data_Types1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -47,6 +47,176 @@
     "print(l)\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DICTIONARIES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'COA': '62', 'DSA': '54', 'UHV': '31', 'PYTHON': '24'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "myDict = {\n",
+    "    \"Name\" : \"Vighnesh \",\n",
+    "    \"Education\" :\"Under Graduate\",\n",
+    "    \"Marks\":{\n",
+    "        \"COA\":\"62\",\n",
+    "        \"DSA\":\"54\",\n",
+    "        \"UHV\":\"31\",\n",
+    "        \"PYTHON\":\"24\"\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "print(myDict[\"Marks\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Name', 'Education', 'Marks']\n",
+      "<class 'list'>\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "Dict_List =list(myDict.keys())\n",
+    "print(Dict_List)\n",
+    "print(type(Dict_List))\n",
+    "print(len(myDict))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values(['Vighnesh ', 'Under Graduate', {'COA': '62', 'DSA': '54', 'UHV': '31', 'PYTHON': '24'}])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myDict.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Name': 'Vighnesh ',\n",
+       " 'Education': 'Under Graduate',\n",
+       " 'Marks': {'COA': '62', 'DSA': '54', 'UHV': '31', 'PYTHON': '24'},\n",
+       " 'Hello': 'HI'}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myDict.update({\"Hello\":\"HI\"})\n",
+    "myDict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Under Graduate'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myDict.get(\"Education\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('Name', 'Vighnesh '), ('Education', 'Under Graduate'), ('Marks', {'COA': '62', 'DSA': '54', 'UHV': '31', 'PYTHON': '24'}), ('Hello', 'HI')])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myDict.items()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SETS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, '2', 12, '12'}\n",
+      "<class 'set'>\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "collection={12,1,2,1,2,1,\"2\",1,2,12,\"12\"} #it holds only the unique values \n",
+    "print(collection)\n",
+    "print(type(collection))\n",
+    "print(len(collection))  # total number of items\n"
    ]
   },
   {
