--- a/Data_Types1.ipynb
+++ b/Data_Types1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "dict_values(['Vighnesh ', 'Under Graduate', {'COA': '62', 'DSA': '54', 'UHV': '31', 'PYTHON': '24'}])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        " 'Hello': 'HI'}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "'Under Graduate'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "dict_items([('Name', 'Vighnesh '), ('Education', 'Under Graduate'), ('Marks', {'COA': '62', 'DSA': '54', 'UHV': '31', 'PYTHON': '24'}), ('Hello', 'HI')])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -217,6 +217,176 @@
     "print(collection)\n",
     "print(type(collection))\n",
     "print(len(collection))  # total number of items\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, '2', 23, 12, '12'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "collection.add(23)\n",
+    "print(collection)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collection.remove(\"2\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{12, '12', 23}"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = collection.pop()\n",
+    "collection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 3, 4, 5}"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = {1,2,3,4,5}\n",
+    "b = {2,3,4,5,6}\n",
+    "a.intersection(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'table': ['a piece of furniture', 'list of facts and Figure'],\n",
+       " 'cat': 'a small animal'}"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#WAP \n",
+    "myDict={\n",
+    "    \"table\":[\"a piece of furniture\",\"list of facts and Figure\"],\n",
+    "    \"cat\":\"a small animal\"\n",
+    "}\n",
+    "myDict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "set1={\"python\",\"java\",\"c++\",\"python\",\"javaScript\",\"java\",\"python\",\"java\",\"c++\",c}\n",
+    "print(len(set1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'subject1': 74, 'subject2': 35, 'subject3': 34}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Wap to enter the marks of 3 subject from the user \n",
+    "dict1={\n",
+    "    \"subject1\":\"\",\n",
+    "    \"subject2\":\"\",\n",
+    "    \"subject3\":\"\"\n",
+    "}\n",
+    "\n",
+    "marks = int(input(\"Enter the marks of the first subject\"))\n",
+    "dict1[\"subject1\"] = marks\n",
+    "\n",
+    "marks = int(input(\"Enter the marks of the first subject\"))\n",
+    "dict1[\"subject2\"] = marks\n",
+    "\n",
+    "marks = int(input(\"Enter the marks of the first subject\"))\n",
+    "dict1[\"subject3\"] = marks\n",
+    "\n",
+    "print(dict1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{9}"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Wap to store the 9 and 9.0 in the set \n",
+    "values={9,(9.0)}\n",
+    "values\n"
    ]
   },
   {
