questions that has come in odd sem of the 2023-23

--- a/Data_Types1.ipynb
+++ b/Data_Types1.ipynb
@@ -369,23 +369,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{9}"
+       "{(float, 9.0), (int, 9)}"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Wap to store the 9 and 9.0 in the set \n",
-    "values={9,(9.0)}\n",
+    "values={(int,9),(float,9.0)}\n",
     "values\n"
    ]
   },
