--- a/File Operation/Untitled Folder/Papers-AKTU.ipynb
+++ b/File Operation/Untitled Folder/Papers-AKTU.ipynb
@@ -320,6 +320,222 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SEM 3 2021-22\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (827646678.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 6\u001b[0;36m\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1 b \n",
+    "i=0\n",
+    "while i<3:\n",
+    "    print(i)\n",
+    "i+=1\n",
+    "else:\n",
+    "print(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "Missing parentheses in call to 'print'. Did you mean print(...)? (2388762804.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[2], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    print x\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(...)?\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cube(x):\n",
+    "    return x*x*x\n",
+    "x = cube(3)\n",
+    "print x "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2 b \n",
+    "import random\n",
+    "rand_list = [1,2,3,4,5]\n",
+    "random.shuffle(rand_list)\n",
+    "print(rand_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "move the disk from 1 to 3\n",
+      "move the disk from 1 to 2\n",
+      "move the disk from 2 to 3\n",
+      "move the disk from 1 to 3\n",
+      "move the disk from 3 to 1\n",
+      "move the disk from 3 to 2\n",
+      "move the disk from 2 to 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def TOH(n,A,B,C):\n",
+    "    if(n>0):\n",
+    "        TOH(n-1,A,C,B)\n",
+    "        print(f\"move the disk from {A} to {C}\")\n",
+    "        TOH(n-1,C,A,B)\n",
+    "TOH(3,1,2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "*****\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4 a \n",
+    "\n",
+    "n=5 \n",
+    "\n",
+    "for i in range(1,n+1):\n",
+    "    print(\"*\"*i)\n",
+    "\n",
+    "for i in range(n-1,0,-1):\n",
+    "    print(\"*\"*i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 1 2 3 5 8 13 21 34 "
+     ]
+    }
+   ],
+   "source": [
+    "# 4 b\n",
+    "def fibonacci(n):\n",
+    "    a = 0\n",
+    "    b = 1\n",
+    "    for i in range(n):\n",
+    "        print(a,end=\" \")\n",
+    "        a,b=b,a+b\n",
+    "\n",
+    "        \n",
+    "n = int(input(\"Enter the Terms of Fibonacci Series you want to generate:\"))\n",
+    "fibonacci(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modified String: oellh\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5 a \n",
+    "def swap_first_last(s):\n",
+    "    if len(s) <=1:\n",
+    "        return s\n",
+    "    else:\n",
+    "        return s[-1] + s[1:-1] + s[0]\n",
+    "givestr = input(\"Enter the String:\")\n",
+    "print(\"Modified String:\",swap_first_last(givestr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The elt is found at index 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Binary Search Recursive Algo\n",
+    "def BinarySearch(arr,s,e,k):\n",
+    "    if(s>e):\n",
+    "        return -1\n",
+    "    mid =(s+e)//2\n",
+    "    if(arr[mid] == k):\n",
+    "        return mid\n",
+    "    elif(arr[mid] > k):\n",
+    "        return BinarySearch(arr,s,mid,k)\n",
+    "    else:\n",
+    "        return BinarySearch(arr,mid+1,e,k)\n",
+    "arr=[1,2,35,37,39,40,45]\n",
+    "k = 40\n",
+    "result = BinarySearch(arr,0,len(arr)-1,k)\n",
+    "print(\"The elt is found at index\",result)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
