--- a/File Operation/Untitled Folder/Papers-AKTU.ipynb
+++ b/File Operation/Untitled Folder/Papers-AKTU.ipynb
@@ -536,11 +536,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SEM 3 2022-23"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1 i \n",
+    "def count1(s):\n",
+    "    vowels=\"AEIOUaeiou\"\n",
+    "    count = 0\n",
+    "    for c in s:\n",
+    "        if c in vowels:\n",
+    "            count += 1\n",
+    "    return count \n",
+    "print(count1(\"I Love India\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "M@n@k@y\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1 j\n",
+    "myList = ['M','n','k','y']\n",
+    "print(\"@\".join(myList))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 2 a\n",
+    "string1=\"abba\"\n",
+    "string2 = string1[::-1]\n",
+    "if (string1 == string2):\n",
+    "    print(\"It is a palindrome\")"
+   ]
   }
  ],
  "metadata": {
