i dont know what i am doing

--- a/File Operation/Pandas.ipynb
+++ b/File Operation/Pandas.ipynb
@@ -372,7 +372,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5720/1018625119.py:1: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
+      "/tmp/ipykernel_12786/1018625119.py:1: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
       "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
       "A typical example is when you are setting values in a column of a DataFrame, like:\n",
       "\n",
@@ -383,7 +383,7 @@
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "\n",
       "  Train[\"Train Name\"][0]= 'Bareilly-Banaras-Express'\n",
-      "/tmp/ipykernel_5720/1018625119.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_12786/1018625119.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "ea4cdfc0-bad6-4be7-ac0a-70caaa9e32ae",
    "metadata": {},
    "outputs": [],
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "c86bf1b2-0ca1-4989-bde3-411c73a1a6c2",
    "metadata": {},
    "outputs": [],
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "54b9efc3-1d22-4ab1-845a-6562409b87c0",
    "metadata": {},
    "outputs": [
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "3cb7fe23-1b6b-4a89-8213-59ec5903425b",
    "metadata": {},
    "outputs": [],
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "1c66a920-c1f3-4dea-8a78-bb9425322df6",
    "metadata": {},
    "outputs": [],
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "f9c3ee14-5d0a-484c-87de-af4acf16f1d9",
    "metadata": {},
    "outputs": [
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "4e84f308-c056-4d2b-91b8-e32de3fcdc83",
    "metadata": {},
    "outputs": [],
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "a1a9934e-0a00-4755-b0dd-33dc7d9e060e",
    "metadata": {},
    "outputs": [
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "8bbc0938-aaec-49cc-97a1-10ce8f8bf394",
    "metadata": {},
    "outputs": [],
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "fb191b4d-3129-4415-a955-38795c0b74da",
    "metadata": {},
    "outputs": [
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "687d1b78-657e-4d35-aac8-fa9b22cfb0f6",
    "metadata": {},
    "outputs": [
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "d588cef9-adde-429c-8bb4-35dbda2388ef",
    "metadata": {},
    "outputs": [
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "0bdd6135-7cc0-4575-8b25-75d9696c1fa4",
    "metadata": {},
    "outputs": [
@@ -1329,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "dba51c20-8a76-4415-abf8-99793c055213",
    "metadata": {},
    "outputs": [
@@ -1439,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "fad659c5-7fb4-4bbf-95db-57e501fbd2f6",
    "metadata": {},
    "outputs": [
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "1fdccc15-cb20-49b7-b851-cabb864f274c",
    "metadata": {},
    "outputs": [
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "36c66f02-4dd0-4716-864a-cd036a4b8ecf",
    "metadata": {},
    "outputs": [],
@@ -1513,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "e5cdf065-380e-4352-a98e-d6cc9495e4a2",
    "metadata": {},
    "outputs": [
@@ -1692,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "be121e17-f0be-46b4-9850-9100c1bfdfe9",
    "metadata": {
     "scrolled": true
@@ -1721,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "dde69aa5-2719-47df-8069-65159a65fb3a",
    "metadata": {},
    "outputs": [
@@ -1793,7 +1793,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "usr",
    "language": "python",
    "name": "python3"
   },
