--- a/File Operation/College.ipynb
+++ b/File Operation/College.ipynb
@@ -422,6 +422,593 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PANDAS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Release-Year</th>\n",
+       "      <th>Grossing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Inception</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Martian</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>LOKI</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>I</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Name  Release-Year  Grossing\n",
+       "0  Inception          2019       500\n",
+       "1    Martian          2014       250\n",
+       "2       LOKI          2022       100\n",
+       "3          I          2015         1"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "movies = {\"Name\":[\"Inception\",\"Martian\",\"LOKI\",\"I\"],\n",
+    "          \"Release-Year\":[2019,2014,2022,2015],\n",
+    "          \"Grossing\":[500,250,100,1]}\n",
+    "\n",
+    "df = pd.DataFrame(movies)\n",
+    "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    Inception\n",
+       "1      Martian\n",
+       "2         LOKI\n",
+       "Name: Name, dtype: object"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[0:3,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0\n",
+       "0  1\n",
+       "1  2\n",
+       "2  3\n",
+       "3  4\n",
+       "4  5\n",
+       "5  5\n",
+       "6  6\n",
+       "7  6"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser = pd.DataFrame([1,2,3,4,5,5,6,6])\n",
+    "ser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0  1\n",
+       "0  1  2\n",
+       "1  2  3\n",
+       "2  3  4\n",
+       "3  4  4\n",
+       "4  5  5\n",
+       "5  5  5\n",
+       "6  6  4\n",
+       "7  6  3"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser[1]=[2,3,4,4,5,5,4,3]\n",
+    "ser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>8.00000</td>\n",
+       "      <td>8.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>4.00000</td>\n",
+       "      <td>3.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.85164</td>\n",
+       "      <td>1.035098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2.75000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>4.50000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>5.25000</td>\n",
+       "      <td>4.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>6.00000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             0         1\n",
+       "count  8.00000  8.000000\n",
+       "mean   4.00000  3.750000\n",
+       "std    1.85164  1.035098\n",
+       "min    1.00000  2.000000\n",
+       "25%    2.75000  3.000000\n",
+       "50%    4.50000  4.000000\n",
+       "75%    5.25000  4.250000\n",
+       "max    6.00000  5.000000"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 8 entries, 0 to 7\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column  Non-Null Count  Dtype\n",
+      "---  ------  --------------  -----\n",
+      " 0   0       8 non-null      int64\n",
+      " 1   1       8 non-null      int64\n",
+      "dtypes: int64(2)\n",
+      "memory usage: 260.0 bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "ser.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'>' not supported between instances of 'list' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[27], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m filtered_movies \u001b[38;5;241m=\u001b[39m movies[\u001b[43mmovies\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mGrossing\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m>\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m100\u001b[39;49m]\n",
+      "\u001b[0;31mTypeError\u001b[0m: '>' not supported between instances of 'list' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "filtered_movies = movies[movies[\"Grossing\"] > 100]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tkinter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib64/python3.13/tkinter/__init__.py\", line 2068, in __call__\n",
+      "    return self.func(*args)\n",
+      "           ~~~~~~~~~^^^^^^^\n",
+      "  File \"/tmp/ipykernel_13535/3495654204.py\", line 40, in <lambda>\n",
+      "    button5 = Button(frame,text =\"5\",command=lambda:button_press(5))\n",
+      "                                                    ~~~~~~~~~~~~^^^\n",
+      "  File \"/tmp/ipykernel_13535/3495654204.py\", line 4, in button_press\n",
+      "    equation_text = equation_text + s\n",
+      "                    ~~~~~~~~~~~~~~^~~\n",
+      "TypeError: can only concatenate str (not \"int\") to str\n",
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib64/python3.13/tkinter/__init__.py\", line 2068, in __call__\n",
+      "    return self.func(*args)\n",
+      "           ~~~~~~~~~^^^^^^^\n",
+      "  File \"/tmp/ipykernel_13535/3495654204.py\", line 40, in <lambda>\n",
+      "    button5 = Button(frame,text =\"5\",command=lambda:button_press(5))\n",
+      "                                                    ~~~~~~~~~~~~^^^\n",
+      "  File \"/tmp/ipykernel_13535/3495654204.py\", line 4, in button_press\n",
+      "    equation_text = equation_text + s\n",
+      "                    ~~~~~~~~~~~~~~^~~\n",
+      "TypeError: can only concatenate str (not \"int\") to str\n",
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib64/python3.13/tkinter/__init__.py\", line 2068, in __call__\n",
+      "    return self.func(*args)\n",
+      "           ~~~~~~~~~^^^^^^^\n",
+      "  File \"/tmp/ipykernel_13535/3495654204.py\", line 40, in <lambda>\n",
+      "    button5 = Button(frame,text =\"5\",command=lambda:button_press(5))\n",
+      "                                                    ~~~~~~~~~~~~^^^\n",
+      "  File \"/tmp/ipykernel_13535/3495654204.py\", line 4, in button_press\n",
+      "    equation_text = equation_text + s\n",
+      "                    ~~~~~~~~~~~~~~^~~\n",
+      "TypeError: can only concatenate str (not \"int\") to str\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[33], line 76\u001b[0m\n\u001b[1;32m     73\u001b[0m clear \u001b[38;5;241m=\u001b[39m Button(frame,text\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCLEAR\u001b[39m\u001b[38;5;124m\"\u001b[39m,command\u001b[38;5;241m=\u001b[39mclear())\n\u001b[1;32m     74\u001b[0m clear\u001b[38;5;241m.\u001b[39mgrid(row\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m,column\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m---> 76\u001b[0m \u001b[43mroot\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmainloop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/usr/lib64/python3.13/tkinter/__init__.py:1599\u001b[0m, in \u001b[0;36mMisc.mainloop\u001b[0;34m(self, n)\u001b[0m\n\u001b[1;32m   1597\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmainloop\u001b[39m(\u001b[38;5;28mself\u001b[39m, n\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m):\n\u001b[1;32m   1598\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Call the mainloop of Tk.\"\"\"\u001b[39;00m\n\u001b[0;32m-> 1599\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtk\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmainloop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "from tkinter import *\n",
+    "def button_press(s):\n",
+    "    global equation_text\n",
+    "    equation_text = equation_text + str(s)\n",
+    "    equation_label.set(equation_text)\n",
+    "\n",
+    "def equals():\n",
+    "    try:\n",
+    "        global equation_text\n",
+    "        total = str(eval(equation_text))\n",
+    "        equation_label.set(total)\n",
+    "        equation_text=total\n",
+    "    except:\n",
+    "        equation_label.set(\"Something Went Wrong!\")\n",
+    "\n",
+    "def clear():\n",
+    "    equation_label.set(\" \")\n",
+    "    equation_text=\"\"\n",
+    "\n",
+    "root = Tk()\n",
+    "equation_text=\"\"\n",
+    "equation_label = StringVar()\n",
+    "frame = Frame(root)\n",
+    "frame.pack()\n",
+    "\n",
+    "label = Label(root,textvariable=equation_label)\n",
+    "label.pack()\n",
+    "button1 = Button(frame,text =\"1\",command=lambda:button_press(1))\n",
+    "button1.grid(row=0,column=0)\n",
+    "\n",
+    "button2 = Button(frame,text =\"2\",command=lambda:button_press(2))\n",
+    "button2.grid(row=0,column=1)\n",
+    "\n",
+    "button3 = Button(frame,text =\"3\",command=lambda:button_press(3))\n",
+    "button3.grid(row=0,column=2)\n",
+    "\n",
+    "button4 = Button(frame,text =\"4\",command=lambda:button_press(4))\n",
+    "button4.grid(row=1,column=0)\n",
+    "\n",
+    "button5 = Button(frame,text =\"5\",command=lambda:button_press(5))\n",
+    "button5.grid(row=1,column=1)\n",
+    "\n",
+    "button6 = Button(frame,text =\"6\",command=lambda:button_press(6))\n",
+    "button6.grid(row=1,column=2)\n",
+    "\n",
+    "button7 = Button(frame,text =\"7\",command=lambda:button_press(7))\n",
+    "button1.grid(row=2,column=0)\n",
+    "\n",
+    "button8 = Button(frame,text =\"8\",command=lambda:button_press(8))\n",
+    "button1.grid(row=2,column=1)\n",
+    "\n",
+    "button9 = Button(frame,text =\"9\",command=lambda:button_press(9))\n",
+    "button1.grid(row=2,column=2)\n",
+    "\n",
+    "button0 = Button(frame,text =\"0\",command=lambda:button_press(0))\n",
+    "button1.grid(row=3,column=0)\n",
+    "\n",
+    "equal = Button(frame,text =\"=\",command=equals())\n",
+    "equal.grid(row=3,column=1)\n",
+    "\n",
+    "add = Button(frame,text =\"+\",command=lambda:button_press(\"+\"))\n",
+    "add.grid(row=0,column=3)\n",
+    "\n",
+    "sub = Button(frame,text =\"-\",command=lambda:button_press(\"-\"))\n",
+    "sub.grid(row=1,column=3)\n",
+    "\n",
+    "mul = Button(frame,text =\"*\",command=lambda:button_press(\"*\"))\n",
+    "mul.grid(row=2,column=3)\n",
+    "\n",
+    "div = Button(frame,text=\"/\",command=lambda:button_press(\"/\"))\n",
+    "div.grid(row=3,column=3)\n",
+    "\n",
+    "clear = Button(frame,text=\"CLEAR\",command=clear())\n",
+    "clear.grid(row=3,column=2)\n",
+    "\n",
+    "root.mainloop()\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -445,7 +1032,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
