--- a/File Operation/Pandas.ipynb
+++ b/File Operation/Pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "508d4a86-bd36-4bbe-99d9-6ee51bb87a7b",
    "metadata": {},
    "outputs": [],
@@ -920,7 +920,7 @@
    "id": "88427a9a-4762-43ed-9e0a-64ebea4c9eef",
    "metadata": {},
    "source": [
-    "###COLLEGE\n",
+    "#####  COLLEGE\n",
     "\n",
     "\n"
    ]
